# stack2cabal

./: README.md  stack2cabal.cabal
src/: Main.hs  Stack2Cabal.hs  Stack2Yaml.hs
src/Stack2Cabal/: Compiler.hs  Config.hs  Constraints.hs  Git.hs  Packages.hs  StackYaml.hs  Util.hs
src/Stack2Yaml/: StackYaml.hs
