name:                stack2cabal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stack2cabal#readme
license:             MIT
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          brunjlar@gmail.com
copyright:           2017 Lars Bruenjes
category:            Build
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stack2cabal
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Stack2Yaml   
                     , Stack2Yaml.StackYaml
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , filepath
                     , text
                     , yaml
  ghc-options:         -Wall -O2
